fix text alignment

--- a/src/clue/components/clue-app-header.sass
+++ b/src/clue/components/clue-app-header.sass
@@ -26,7 +26,6 @@ $member-size: 18px
     align-items: center
     justify-content: flex-start
     .unit
-      text-align: center
       .title
         font-size: 13px
         font-weight: bold
